move <script> element from body to head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/main.js" defer></script>
     <title>My test page</title>
   </head>
   <body>
@@ -30,6 +31,5 @@
     </p>
     <p>Here is a picture of a dog:</p>
     <button>Change user</button>
-    <script src="./scripts/main.js"></script>
   </body>
 </html>
