--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </ol>
     <p>Next, I will explore anchor element:</p>
     <p>
-      Click <a href="https://www.baidu.com">baidu</a> will take you to the
-      homepage of baidu.
+      Click <a href="https://www.google.com">Google</a> will take you to the official website of Google.
     </p>
     <p>Here is a picture of a dog:</p>
     <button>Change user</button>
