add target=_blank to element <a>

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </ol>
     <p>Next, I will explore anchor element:</p>
     <p>
-      Click <a href="https://www.google.com">Google</a> will take you to the official website of Google.
+      Click <a href="https://www.google.com" target="_blank">Google</a>
+      will take you to the official website of Google.
     </p>
     <p>Here is a picture of a dog:</p>
     <button>Change user</button>
